--- a/angular.json
+++ b/angular.json
@@ -54,7 +54,9 @@
             "development": {
               "optimization": false,
               "extractLicenses": false,
-              "sourceMap": true
+              "sourceMap": true,
+              "ssr": false,
+              "prerender": false
             }
           },
           "defaultConfiguration": "production"
@@ -93,7 +95,7 @@
               "src/styles.css"
             ],
             "scripts": [
-              
+
             ]
           }
         }
